Closed Bug 669823 Opened 15 years ago Closed 15 years ago

ASSERTION: TabChild::SetStatusWithContext not supported in TabChild

Categories

(Core :: IPC, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: surkov, Assigned: cjones)

Details

Attachments

(1 file)

move mouse over mozilla.org page (open it in second tab to make sure it's loaded in own process). stack trace: xul.dll!mozilla::dom::TabChild::SetStatusWithContext(unsigned int aStatusType, const nsAString_internal & aStatusText, nsISupports * aStatusContext) Line 246 + 0x1b bytes C++ > xul.dll!nsDocShell::OnOverLink(nsIContent * aContent, nsIURI * aURI, const wchar_t * aTargetSpec) Line 11714 + 0x3a bytes C++ xul.dll!nsContentUtils::TriggerLink(nsIContent * aContent, nsPresContext * aPresContext, nsIURI * aLinkURI, const nsString & aTargetSpec, int aClick, int aIsUserTriggered) Line 4093 C++ xul.dll!nsGenericElement::PreHandleEventForLinks(nsEventChainPreVisitor & aVisitor) Line 5105 + 0x26 bytes C++ xul.dll!nsGenericHTMLElement::PreHandleEventForAnchors(nsEventChainPreVisitor & aVisitor) Line 1071 C++ xul.dll!nsHTMLAnchorElement::PreHandleEvent(nsEventChainPreVisitor & aVisitor) Line 276 C++ xul.dll!nsEventTargetChainItem::PreHandleEvent(nsEventChainPreVisitor & aVisitor) Line 275 + 0x1c bytes C++ xul.dll!nsEventDispatcher::Dispatch(nsISupports * aTarget, nsPresContext * aPresContext, nsEvent * aEvent, nsIDOMEvent * aDOMEvent, nsEventStatus * aEventStatus, nsDispatchingCallback * aCallback, nsCOMArray<nsIDOMEventTarget> * aTargets) Line 647 C++ xul.dll!nsEventStateManager::DispatchMouseEvent(nsGUIEvent * aEvent, unsigned int aMessage, nsIContent * aTargetContent, nsIContent * aRelatedContent) Line 3792 + 0x26 bytes C++ xul.dll!nsEventStateManager::NotifyMouseOver(nsGUIEvent * aEvent, nsIContent * aContent) Line 3911 + 0x1e bytes C++ xul.dll!nsEventStateManager::GenerateMouseEnterExit(nsGUIEvent * aEvent) Line 3942 C++ xul.dll!nsEventStateManager::PreHandleEvent(nsPresContext * aPresContext, nsEvent * aEvent, nsIFrame * aTargetFrame, nsEventStatus * aStatus, nsIView * aView) Line 1163 C++ xul.dll!PresShell::HandleEventInternal(nsEvent * aEvent, nsIView * aView, nsEventStatus * aStatus) Line 7124 + 0x2c bytes C++ xul.dll!PresShell::HandlePositionedEvent(nsIView * aView, nsIFrame * aTargetFrame, nsGUIEvent * aEvent, nsEventStatus * aEventStatus) Line 6971 + 0x14 bytes C++ xul.dll!PresShell::HandleEvent(nsIView * aView, nsGUIEvent * aEvent, int aDontRetargetEvents, nsEventStatus * aEventStatus) Line 6806 + 0x1e bytes C++ xul.dll!nsViewManager::HandleEvent(nsView * aView, nsGUIEvent * aEvent) Line 1056 C++ xul.dll!nsViewManager::DispatchEvent(nsGUIEvent * aEvent, nsIView * aView, nsEventStatus * aStatus) Line 1031 + 0x13 bytes C++ xul.dll!HandleEvent(nsGUIEvent * aEvent) Line 161 C++ xul.dll!mozilla::widget::PuppetWidget::DispatchEvent(nsGUIEvent * event, nsEventStatus & aStatus) Line 323 + 0xc bytes C++ xul.dll!mozilla::dom::TabChild::DispatchWidgetEvent(nsGUIEvent & event) Line 656 + 0x27 bytes C++ xul.dll!mozilla::dom::TabChild::RecvRealMouseEvent(const nsMouseEvent & event) Line 587 C++ xul.dll!mozilla::dom::PBrowserChild::OnMessageReceived(const IPC::Message & __msg) Line 1105 + 0x1a bytes C++ xul.dll!mozilla::dom::PContentChild::OnMessageReceived(const IPC::Message & __msg) Line 1259 + 0x11 bytes C++ xul.dll!mozilla::ipc::AsyncChannel::OnDispatchMessage(const IPC::Message & msg) Line 294 + 0x1e bytes C++ xul.dll!mozilla::ipc::RPCChannel::OnMaybeDequeueOne() Line 435 C++ xul.dll!DispatchToMethod<mozilla::ipc::RPCChannel,bool (__thiscall mozilla::ipc::RPCChannel::*)(void)>(mozilla::ipc::RPCChannel * obj, bool (void)* method, const Tuple0 & arg) Line 384 C++ xul.dll!RunnableMethod<mozilla::ipc::RPCChannel,bool (__thiscall mozilla::ipc::RPCChannel::*)(void),Tuple0>::Run() Line 307 + 0x1e bytes C++ xul.dll!mozilla::ipc::RPCChannel::RefCountedTask::Run() Line 464 + 0x1a bytes C++ xul.dll!mozilla::ipc::RPCChannel::DequeueTask::Run() Line 487 + 0x19 bytes C++ xul.dll!MessageLoop::RunTask(Task * task) Line 343 C++ xul.dll!MessageLoop::DeferOrRunPendingTask(const MessageLoop::PendingTask & pending_task) Line 353 C++ xul.dll!MessageLoop::DoWork() Line 450 + 0xc bytes C++ xul.dll!mozilla::ipc::DoWorkRunnable::Run() Line 71 C++ xul.dll!nsThread::ProcessNextEvent(int mayWait, int * result) Line 618 + 0x19 bytes C++ xul.dll!NS_ProcessNextEvent_P(nsIThread * thread, int mayWait) Line 245 + 0x16 bytes C++ xul.dll!mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate * aDelegate) Line 134 + 0xe bytes C++ xul.dll!mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate * aDelegate) Line 230 C++ xul.dll!MessageLoop::RunInternal() Line 219 C++ xul.dll!MessageLoop::RunHandler() Line 203 C++ xul.dll!MessageLoop::Run() Line 177 C++ xul.dll!nsBaseAppShell::Run() Line 191 C++ xul.dll!nsAppShell::Run() Line 249 + 0x9 bytes C++ xul.dll!XRE_RunAppShell() Line 671 + 0x19 bytes C++ xul.dll!mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate * aDelegate) Line 215 + 0x5 bytes C++ xul.dll!MessageLoop::RunInternal() Line 219 C++ xul.dll!MessageLoop::RunHandler() Line 203 C++ xul.dll!MessageLoop::Run() Line 177 C++ xul.dll!XRE_InitChildProcess(int aArgc, char * * aArgv, GeckoProcessType aProcess) Line 514 C++ plugin-container.exe!NS_internal_main(int argc, char * * argv) Line 81 + 0x12 bytes C++ plugin-container.exe!wmain(int argc, wchar_t * * argv) Line 107 + 0xd bytes C++ plugin-container.exe!__tmainCRTStartup() Line 583 + 0x19 bytes C plugin-container.exe!wmainCRTStartup() Line 403 C
Attachment #544491 - Flags: review?(benjamin) → review+
Chris, can the patch be checked in?
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: