Bug 669823: SetStatusWithContext() is reached. Defer deeper discussion about status handling to bug 617804. r=bsmedberg